welcome.lessons.welcome.summative.Moria.scala.code
def biscuit(){
while (!estSurBiscuit){
  avance()
}
prendBiscuit()
while (!estSurBiscuit){
  recule
}
avance()
poseBiscuit()
  biscuit(